@@ -2,6 +2,8 @@
 v2.0.10-git
 -----------
 
+[mms] Correctly reindex existing rules when deleting a rule and using the SQL
+      filters storage driver.
 [mms] Don't allow a user to save a rule with no matching conditions.
 
 
